added netvar manager and pattern scanning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,16 @@ crate-type = ["cdylib"]
 [dependencies]
 winapi = { version = "0.3.9", features = ["minwindef", "memoryapi", "consoleapi", "libloaderapi", "winnt", "wincon", "winuser", "processthreadsapi","handleapi","psapi","heapapi","synchapi"] }
 spin = "0.9.4"
+vtables = { git = "https://github.com/kuragehime/vtables.git" }
+vtables_derive = { git = "https://github.com/kuragehime/vtables_derive.git" }
+
 [dependencies.lazy_static]
 version = "1.4.0"
 features = ["spin_no_std"]
 
-
+[dependencies.pelite]
+version = "*"
+default-features = false
 
 [profile.dev]
 panic = "abort"
